Fixes padding on mobile version of carousel

--- a/style/app.css
+++ b/style/app.css
@@ -613,7 +613,7 @@ button {
   bottom: 0;
   left: 0;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 4.8rem;
   z-index: 3;
   pointer-events: none;
 }
